--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Covid - Spread Trends</title>
     <script src="/node_modules/angular/angular.min.js"></script>
     <script src="/node_modules/angular-route/angular-route.min.js"></script>
-    <script src="https://d3js.org/d3.v5.js"></script>
-    <script src="https://unpkg.com/topojson@3"></script>
+    <script src="/node_modules/d3/dist/d3.min.js"></script>
+    <script src="/node_modules/topojson/dist/topojson.min.js"></script>
     <link rel="stylesheet" href="src/style.css">
     <script src="app.js"></script>
     <script src="src/contants.js"></script>
+    <script src="src/formatter.js"></script>
     <script src="src/service.js"></script>
     <script src="src/controller/main.js"></script>
 </head>
