--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="src/formatter.js"></script>
     <script src="src/service.js"></script>
     <script src="src/controller/main.js"></script>
+    <link rel="icon" href="assets/img/covid_icon.png">
 </head>
 
 <body>
