--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="/node_modules/angular-route/angular-route.min.js"></script>
     <script src="/node_modules/d3/dist/d3.min.js"></script>
     <script src="/node_modules/topojson/dist/topojson.min.js"></script>
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <script src="app.js"></script>
     <script src="src/contants.js"></script>
     <script src="src/formatter.js"></script>
