--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
 <head>
     <base href="/">
     <meta charset="UTF-8">
+    <meta name="author" content="Manish Gupta">
+    <meta property="og:title" content="COVID-19 Spread Trends" />
+    <meta name="image" property="og:image"
+        content="https://covid-spread-trends.web.app/img/covid_spread_trends_states.png" />
+    <meta property="og:description" content="Impact of COVID-19 across states and districts" />
+    <meta property="og:url" content="https://covid-spread-trends.web.app/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covid - Spread Trends</title>
     <script src="scripts/angular/angular.min.js"></script>
